# java-linear-regression

./: Makefile  README.md
plot/: pyproject.toml
plot/plot/: main.py
project/: CsvDataReader.java  LinearRegressionCalculator.java  Main.java  UsedCar.java
