[tool.poetry]
name = "plot"
version = "0.1.0"
description = ""
authors = ["Koray <koray.oezdemir@barco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
